@@ -3,7 +3,7 @@
  * Plugin Name: Kinsta Must-use Plugins
  * Plugin URI: https://kinsta.com/knowledgebase/kinsta-mu-plugin/
  * Description: The plugin designed to work on Kinsta's managed WordPress hosting platform.
- * Version: 2.4.5
+ * Version: 2.4.6
  * Author: Kinsta Team
  * Author URI: https://kinsta.com/about-us/
  * Text Domain: kinsta-mu-plugins
@@ -16,7 +16,7 @@ if ( ! defined( 'ABSPATH' ) ) { // If this file is called directly.
 	die( 'No script kiddies please!' );
 }
 
-define( 'KINSTAMU_VERSION', '2.4.5' );
+define( 'KINSTAMU_VERSION', '2.4.6' );
 if ( ! defined( 'KINSTAMU_WHITELABEL' ) ) {
 	define( 'KINSTAMU_WHITELABEL', false );
 }
